RateLimit seems finished

--- a/services/RateLimitApi.Service/config.json
+++ b/services/RateLimitApi.Service/config.json
@@ -1,6 +1,9 @@
 {
   "Redis": {
-    "Host": "168.62.49.228:6380",
-    "CacheTimeout": "00:05:00"
+    "Host": "168.62.49.228:6380"
+  },
+  "IpRateLimiting": {
+    "Period": "00:00:15",
+    "Limit": 3
   }
 }
